fixed header modal spacing

--- a/mediaMobile.css
+++ b/mediaMobile.css
@@ -622,6 +622,10 @@ section .content {
     text-align: center;
   }
 
+  .modal-header {
+    justify-content: center;
+  }
+
   /*Matcher section ====================================================================================*/
 
   #matcherTitle {
