--- a/mediaSmallMobile.css
+++ b/mediaSmallMobile.css
@@ -538,6 +538,10 @@
     text-align: center;
   }
 
+  .modal-header {
+    justify-content: center;
+  }
+
   /*Matcher section ====================================================================================*/
 
   #matcherTitle {
